# ChucKDesigner

./: .gitignore  .gitmodules  CMakeLists.txt  ChucKDesigner.toe  LICENSE  README.md  build_macos.sh  build_windows.bat
.github/workflows/: all.yml
Backup/: .gitignore
Plugins/: .gitignore
assets/: .gitignore  advanced_128_channels_out.ck  advanced_fauck_flute.ck  advanced_fauck_reverb.ck  advanced_global_float_example.ck  advanced_global_float_random_out.ck  basic_array_melody.ck  basic_delay.ck  chuckdesigner_file_playback.ck  chuckdesigner_passthrough.ck  chuckdesigner_ping_pong_delay.ck  chuckdesigner_print_directory.ck  machine_add.ck  sequencer.ck  sequencer_simple.ck
install_script/: macos_install_python.py
src/: CPlusPlusCHOPExample.cpp  CPlusPlusCHOPExample.h  CPlusPlusCHOPExample.sln  CPlusPlusCHOPExample.vcxproj  CPlusPlus_Common.h  ChucKDesigner.sln  ChucKDesigner.vcxproj  ChucKDesignerCHOP.cpp  ChucKDesignerCHOP.h  ChucKDesignerCHOP_plugin.cpp  ChucKDesignerPlugin.cpp  ChucKDesignerPlugin.h  ChucKDesignerShared.cpp  ChucKDesignerShared.h  ChucKListenerCHOP.cpp  ChucKListenerCHOP.h  Plugin_ChucK.cpp  Plugin_ChucK.h
src/CPlusPlusCHOPExample.xcodeproj/: project.pbxproj
src/CPlusPlusCHOPExample.xcodeproj/xcshareddata/xcschemes/: CPlusPlusCHOPExample.xcscheme
